2/test/test.output
Grammar

    0 $accept: start $end

    1 start: S

    2 S: C C

    3 C: c C
    4  | d


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    c (258) 3
    d (259) 4


Nonterminals, with rules where they appear

    $accept (5)
        on left: 0
    start (6)
        on left: 1
        on right: 0
    S (7)
        on left: 2
        on right: 1
    C (8)
        on left: 3 4
        on right: 2 3


State 0

    0 $accept: • start $end
    1 start: • S
    2 S: • C C
    3 C: • c C
    4  | • d

    c  shift, and go to state 1
    d  shift, and go to state 2

    start  go to state 3
    S      go to state 4
    C      go to state 5


State 1

    3 C: • c C
    3  | c • C
    4  | • d

    c  shift, and go to state 1
    d  shift, and go to state 2

    C  go to state 6


State 2

    4 C: d •

    $default  reduce using rule 4 (C)


State 3

    0 $accept: start • $end

    $end  shift, and go to state 7


State 4

    1 start: S •

    $default  reduce using rule 1 (start)


State 5

    2 S: C • C
    3 C: • c C
    4  | • d

    c  shift, and go to state 1
    d  shift, and go to state 2

    C  go to state 8


State 6

    3 C: c C •

    $default  reduce using rule 3 (C)


State 7

    0 $accept: start $end •

    $default  accept


State 8

    2 S: C C •

    $default  reduce using rule 2 (S)
